<resources>
    <string name="app_name">My Movies 2</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Shows</string>
    <string name="lbl_movie_title">Title</string>
    <string name="lbl_movie_year">Year</string>
    <string name="txt_movie_rate">Rate </string>
    <string name="lbl_movie_genre">Action, Thriller</string>
    <string name="lbl_movie_metascore">Metascore</string>
    <string name="lbl_movie_overview">Overview</string>
    <string name="lbl_movie_director">Director : </string>
    <string name="lbl_movie_stars">Stars</string>
    <string name="lbl_movie_votes">Votes</string>
    <string name="lbl_tv_title">Title</string>
    <string name="lbl_tv_year">Year</string>
    <string name="txt_tv_rate">Rate </string>
    <string name="lbl_tv_genre">Action, Thriller</string>
    <string name="lbl_tv_overview">Overview</string>
    <string name="lbl_tv_stars">Stars</string>
    <string name="lbl_tv_votes">Votes</string>
    <string name="txt_movie_title">Title</string>
    <string name="txt_movie_synopsis">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="txt_movie_director">Anthony Russo</string>
    <string name="txt_movie_stars">Robert Downey Jr.</string>
    <string name="txt_movie_votes">6.7</string>
    <string name="txt_movie_year">2018</string>
    <string name="description">description</string>
    <string name="separator"> | </string>
    <string name="lbl_stars">Stars : </string>
    <string name="votes">Votes: </string>
    <string name="jacob_cedergren">Jacob Cedergren</string>
    <string name="r">R</string>
    <string name="_31_523">31,523</string>
    <string name="gross">Gross:</string>
    <string name="_0_21m">$0.21M</string>
    <string name="todo">TODO</string>
    <string name="_7_5">7.5</string>
    <string name="_85_min">85 min</string>
    <string name="gustav_moiler">Gustav Moiler</string>
    <string name="lbl_header_movie_home">My Movies</string>
    <string name="lbl_header_movie_detail">Movie Detail </string>
    <string name="lbl_header_tv_detail">TV Show Detail </string>
    <string name="lbl_image_desc">Description</string>
    <string name="lbl_rating">Rating</string>
    <string name="lang_bahasa">Bahasa </string>
    <string name="lang_english">English </string>
    <string name="title">Title</string>
    <string-array name="movie_data_title">
        <item>Avengers: Infinity War</item>
        <item>Deadpool 2</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Mary Poppins Returns </item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Venom </item>
        <item>Creed II</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball: The Path to Power</item>
        <item>Big Fish and Begonia</item>
        <item>Game of Thrones</item>
        <item>Ready Player One</item>
        <item>Mile 22</item>
        <item>Fear the Walking Dead</item>
        <item>Tomb Raider</item>
        <item>Bumblebee</item>
    </string-array>
    <string-array name="movie_data_overview">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain</item>
        <item>Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy`s life</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When `Wilson Kingpin` Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension</item>
        <item>In Depression-era London, a now-grown Jane and Michael Banks, along with Michael`s three children, are visited by the enigmatic Mary Poppins following a personal loss. Through her unique magical skills, and with the aid of her friend Jack, she helps the family rediscover the joy and wonder missing in their lives</item>
        <item>After three years, the business of Muslihat (Epi Kusnandar), who has retired as a thug, has a problem. Sales decline. Muslihat also faces new problems when Safira (Safira Maharani), her only daughter, grows up in adolescence and begins to be visited by boys. A bigger problem: frictions between his former subordinates</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family`s past, Adonis Creed is up against the challenge of his life</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men</item>
        <item>Captain Glass of the USS Arkansas discovers that a coup d`état is taking place in Russia, so he and his crew join an elite group working on the ground to prevent a war</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless’ discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup`s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind</item>
        <item>A retelling of Dragon Ball`s origin with a different take on the meeting of Goku, Bulma, and Kame-Sen`nin. It also retells the Red Ribbon Army story; but this time they find Goku rather than Goku finding them</item>
        <item>Beyond the human realm, there is a magical race of beings who control the tides and the changing of the seasons. One of these beings, a young girl named Chun, seeks something more—she wants to experience the human world! At sixteen, she finally gets her chance and transforms into a dolphin in order to explore the world that has her fascinated. But she soon discovers that it’s a dangerous place and nearly gets killed in a vortex. Luckily, her life is spared when a young boy sacrifices himself to save her. Moved by his kindness and courage, she uses magic to bring him back to life only to learn that this power comes at a serious price. On a new adventure, she`ll have to make her own sacrifices in order to protect his soul until it is ready to return to the human world</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night`s Watch, is all that stands between the realms of men and icy horrors beyond</item>
        <item>When the creator of a popular video game system dies, a virtual contest is created to compete for his fortune</item>
        <item>A CIA field officer and an Indonesian police officer are forced to work together in confronting political corruption. An informant must be moved twenty-two miles to safety</item>
        <item>What did the world look like as it was transforming into the horrifying apocalypse depicted in `The Walking Dead`? This spin-off set in Los Angeles, following new characters as they face the beginning of the end of the world, will answer that question</item>
        <item>Lara Croft, the fiercely independent daughter of a missing adventurer, must push herself beyond her limits when she finds herself on the island where her father disappeared</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug</item>
    </string-array>
    <string-array name="movie_data_poster">
        <item>poster_avengerinfinity</item>
        <item>poster_deadpool</item>
        <item>poster_spiderman</item>
        <item>poster_marrypopins</item>
        <item>poster_preman</item>
        <item>poster_robinhood</item>
        <item>poster_venom</item>
        <item>poster_creed</item>
        <item>poster_glass</item>
        <item>poster_hunterkiller</item>
        <item>poster_dragon</item>
        <item>poster_dragonball</item>
        <item>poster_bigfish</item>
        <item>poster_game</item>
        <item>poster_ready</item>
        <item>poster_mile22</item>
        <item>poster_fearwalkingdead</item>
        <item>poster_tombraider</item>
        <item>poster_bumblebee</item>

    </string-array>
    <string-array name="movie_data_releasedate">
        <item>2018-04-25</item>
        <item>2018-05-15</item>
        <item>2018-06-01</item>
        <item>2018-08-17</item>
        <item>2018-06-14</item>
        <item>2018-06-01</item>
        <item>2018-06-01</item>
        <item>2018-08-01</item>
        <item>2019-05-31</item>
        <item>1998-07-24</item>
        <item>2018-04-18</item>
        <item>2018-07-25</item>
        <item>2016-07-08</item>
        <item>2011-04-17</item>
        <item>2018-03-28</item>
        <item>2018-08-10</item>
        <item>2015-08-23</item>
        <item>2018-03-05</item>
        <item>2018-08-09</item>

    </string-array>
    <string-array name="movie_data_director">
        <item>Anthony Russo</item>
        <item>David Leitch</item>
        <item>Peter Ramsey, Bob Persichetti</item>
        <item>Rob Marshall</item>
        <item>Aris Nugraha</item>
        <item>Otto Bathurst</item>
        <item>Ruben Fleischer</item>
        <item>Steven Caple Jr.</item>
        <item>M. Night Shyamalan</item>
        <item>Donovan Marsh</item>
        <item>Dean DeBlois</item>
        <item>Gustav Moller</item>
        <item>Gustav Moller</item>
        <item>Gustav Moller</item>
        <item>Gustav Moller</item>
        <item>Gustav Moller</item>
        <item>Gustav Moller</item>
        <item>Gustav Moller</item>
        <item>Travis Knight</item>
    </string-array>
</resources>