<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/img_movie_thumb"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_gravity="top"
        android:contentDescription="@string/todo"
        android:foregroundGravity="top"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/poster_aquaman" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_weight="2"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/txt_movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBluePrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/lbl_movie_title" />

        <TextView
            android:id="@+id/txt_movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorGreyDarker"
            tools:text="@string/txt_movie_year" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/stars" />

            <TextView
                android:id="@+id/txt_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7_5"
                android:textColor="@color/colorGreyDarker"
                android:textSize="12sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/txt_movie_votes"
                android:src="@drawable/silver_star"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_movie_rate"
                android:textColor="@color/colorGreyDarker"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_movie_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="3"
            android:text="@string/description"
            android:textColor="@color/colorGreyDarker" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/votes"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_movie_votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/_31_523"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>